--- a/soukuan-good-service/pom.xml
+++ b/soukuan-good-service/pom.xml
@@ -11,5 +11,27 @@
 
     <artifactId>soukuan-good-service</artifactId>
 
+    <dependencies>
 
+        <dependency>
+            <groupId>com.soukuan</groupId>
+            <artifactId>soukuan-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>4.3.14.RELEASE</version>
+        </dependency>
+    </dependencies>
 </project>
