--- a/soukuan-good-service/src/main/resources/config/application-local.properties
+++ b/soukuan-good-service/src/main/resources/config/application-local.properties
@@ -1,23 +1,2 @@
-########################################################
-#                       \u6570\u636E\u6E90\u914D\u7F6E                      #
-########################################################
-wanshifu.dataSource.type=com.alibaba.druid.pool.DruidDataSource
-wanshifu.dataSource.url=jdbc:mysql://192.168.1.20:3306/user_service
-wanshifu.dataSource.username=dev-all
-wanshifu.dataSource.password=all201705
-wanshifu.dataSource.driver-class-name=com.mysql.jdbc.Driver
-
-
-
-
-##########################################################
-#                        redis\u7F13\u5B58\u76F8\u5173\u914D\u7F6E                #
-##########################################################
-wanshifu.redis.redisHost=default-dev-redis.wanshifu.com
-wanshifu.redis.redisPort=6379
-wanshifu.redis.redisPassword=dRedisW135
-
-
-spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
-#\u6253\u5370jpa\u6267\u884C\u7684sql
-spring.jpa.show-sql=true
+#\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
+eureka-url=http://localhost:8888/eureka/
