--- a/soukuan-good-service/src/main/resources/config/application-dev.properties
+++ b/soukuan-good-service/src/main/resources/config/application-dev.properties
@@ -1,25 +1,2 @@
-########################################################
-                    #\u6570\u636E\u6E90\u914D\u7F6E#                        #
-########################################################
-wanshifu.dataSource.type=com.alibaba.druid.pool.DruidDataSource
-wanshifu.dataSource.url=jdbc:mysql://user-service-dev-db.wanshifu.com/user_service?autoReconnect=true
-wanshifu.dataSource.username=dev-all
-wanshifu.dataSource.password=all201705
-wanshifu.dataSource.driver-class-name=com.mysql.jdbc.Driver
-
-
-##########################################################
-#                       \u4E1A\u52A1\u53C2\u6570\u914D\u7F6E                      #
-##########################################################
-# \u83B7\u53D6\u5168\u5C40\u552F\u4E00\u7684\u6570\u503C,\u4E00\u822C\u4F5C\u4E3A\u4E3B\u952Eid\u4F7F\u7528
-guid.url=http://dev-guid.wanshifu.com
-
-##########################################################
-#                        redis\u7F13\u5B58\u76F8\u5173\u914D\u7F6E                #
-##########################################################
-wanshifu.redis.redisHost=default-dev-redis.wanshifu.com
-wanshifu.redis.redisPort=6379
-wanshifu.redis.redisPassword=dRedisW135
-
-
-
+#\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
+eureka-url=http://localhost:8888/eureka/
