--- a/soukuan-good-service/src/main/resources/config/application.properties
+++ b/soukuan-good-service/src/main/resources/config/application.properties
@@ -1,119 +1,4 @@
-######\u5185\u7F6Etomcat\u5BF9\u5916\u670D\u52A1\u7AEF\u53E3##########
-server.port=80
-
-########################################################
-#                  #\u6570\u636E\u5E93\u914D\u7F6E                          #
-########################################################
-# \u4E0B\u9762\u4E3A\u8FDE\u63A5\u6C60\u7684\u8865\u5145\u8BBE\u7F6E\uFF0C\u5E94\u7528\u5230\u4E0A\u9762\u6240\u6709\u6570\u636E\u6E90\u4E2D
-#\u521D\u59CB\u5316\u65F6\u5EFA\u7ACB\u7269\u7406\u8FDE\u63A5\u7684\u4E2A\u6570\u3002\u521D\u59CB\u5316\u53D1\u751F\u5728\u663E\u793A\u8C03\u7528init\u65B9\u6CD5\uFF0C\u6216\u8005\u7B2C\u4E00\u6B21getConnection\u65F6
-wanshifu.dataSource.initialSize=5
-# \u6700\u5C0F\u8FDE\u63A5\u6C60\u6570\u91CF
-wanshifu.dataSource.minIdle=5
-# \u6700\u5927\u8FDE\u63A5\u6C60\u6570\u91CF
-wanshifu.dataSource.maxActive=20
-# \u83B7\u53D6\u8FDE\u63A5\u65F6\u6700\u5927\u7B49\u5F85\u65F6\u95F4\uFF0C\u5355\u4F4D\u6BEB\u79D2\u3002
-wanshifu.dataSource.maxWait=60000
-# \u6709\u4E24\u4E2A\u542B\u4E49\uFF1A
-#1) Destroy\u7EBF\u7A0B\u4F1A\u68C0\u6D4B\u8FDE\u63A5\u7684\u95F4\u9694\u65F6\u95F4\uFF0C\u5982\u679C\u8FDE\u63A5\u7A7A\u95F2\u65F6\u95F4\u5927\u4E8E\u7B49\u4E8EminEvictableIdleTimeMillis\u5219\u5173\u95ED\u7269\u7406\u8FDE\u63A5\u3002
-#2) testWhileIdle\u7684\u5224\u65AD\u4F9D\u636E\uFF0C\u8BE6\u7EC6\u770BtestWhileIdle\u5C5E\u6027\u7684\u8BF4\u660E
-wanshifu.dataSource.timeBetweenEvictionRunsMillis=60000
-# \u8FDE\u63A5\u4FDD\u6301\u7A7A\u95F2\u800C\u4E0D\u88AB\u9A71\u9010\u7684\u6700\u5C0F\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
-wanshifu.dataSource.minEvictableIdleTimeMillis=300000
-# \u7528\u6765\u68C0\u6D4B\u8FDE\u63A5\u662F\u5426\u6709\u6548\u7684sql\uFF0C\u8981\u6C42\u662F\u4E00\u4E2A\u67E5\u8BE2\u8BED\u53E5\uFF0C\u5E38\u7528select 'x'\u3002
-wanshifu.dataSource.validationQuery=SELECT 1 FROM DUAL
-# \u5EFA\u8BAE\u914D\u7F6E\u4E3Atrue\uFF0C\u4E0D\u5F71\u54CD\u6027\u80FD\uFF0C\u5E76\u4E14\u4FDD\u8BC1\u5B89\u5168\u6027\u3002
-# \u7533\u8BF7\u8FDE\u63A5\u7684\u65F6\u5019\u68C0\u6D4B\uFF0C\u5982\u679C\u7A7A\u95F2\u65F6\u95F4\u5927\u4E8EtimeBetweenEvictionRunsMillis\uFF0C\u6267\u884CvalidationQuery\u68C0\u6D4B\u8FDE\u63A5\u662F\u5426\u6709\u6548\u3002
-wanshifu.dataSource.testWhileIdle=true
-# \u7533\u8BF7\u8FDE\u63A5\u65F6\u6267\u884CvalidationQuery\u68C0\u6D4B\u8FDE\u63A5\u662F\u5426\u6709\u6548\uFF0C\u505A\u4E86\u8FD9\u4E2A\u914D\u7F6E\u4F1A\u964D\u4F4E\u6027\u80FD
-wanshifu.dataSource.testOnBorrow=true
-# \u5F52\u8FD8\u8FDE\u63A5\u65F6\u6267\u884CvalidationQuery\u68C0\u6D4B\u8FDE\u63A5\u662F\u5426\u6709\u6548\uFF0C\u505A\u4E86\u8FD9\u4E2A\u914D\u7F6E\u4F1A\u964D\u4F4E\u6027\u80FD\u3002
-wanshifu.dataSource.testOnReturn=true
-# \u662F\u5426\u7F13\u5B58preparedStatement\uFF0C\u4E5F\u5C31\u662FPSCache\u3002PSCache\u5BF9\u652F\u6301\u6E38\u6807\u7684\u6570\u636E\u5E93\u6027\u80FD\u63D0\u5347\u5DE8\u5927\uFF0C\u6BD4\u5982\u8BF4oracle\u3002\u5728mysql\u4E0B\u5EFA\u8BAE\u5173\u95ED\u3002
-wanshifu.dataSource.poolPreparedStatements=false
-# \u8981\u542F\u7528PSCache\uFF0C\u5FC5\u987B\u914D\u7F6E\u5927\u4E8E0\uFF0C\u5F53\u5927\u4E8E0\u65F6\uFF0CpoolPreparedStatements\u81EA\u52A8\u89E6\u53D1\u4FEE\u6539\u4E3Atrue\u3002
-# \u5728Druid\u4E2D\uFF0C\u4E0D\u4F1A\u5B58\u5728Oracle\u4E0BPSCache\u5360\u7528\u5185\u5B58\u8FC7\u591A\u7684\u95EE\u9898\uFF0C\u53EF\u4EE5\u628A\u8FD9\u4E2A\u6570\u503C\u914D\u7F6E\u5927\u4E00\u4E9B\uFF0C\u6BD4\u5982\u8BF4100
-wanshifu.dataSource.maxPoolPreparedStatementPerConnectionSize=20
-# \u914D\u7F6E\u76D1\u63A7\u7EDF\u8BA1\u62E6\u622A\u7684filters\uFF0C\u53BB\u6389\u540E\u76D1\u63A7\u754C\u9762sql\u65E0\u6CD5\u7EDF\u8BA1\uFF0C'wall'\u7528\u4E8E\u9632\u706B\u5899
-wanshifu.dataSource.filters=stat,wall,log4j
-# \u901A\u8FC7connectProperties\u5C5E\u6027\u6765\u6253\u5F00mergeSql\u529F\u80FD\uFF1B\u6162SQL\u8BB0\u5F55
-wanshifu.dataSource.connectionProperties=servlets.stat.mergeSql=true;servlets.stat.slowSqlMillis=5000
-# \u5408\u5E76\u591A\u4E2ADruidDataSource\u7684\u76D1\u63A7\u6570\u636E
-#wanshifu.dataSource.useGlobalDataSourceStat=true
-
-########################################################
-#                  Mybatis\u914D\u7F6E#                         #
-########################################################
-mybatis.mapper-locations=classpath*:**mapper/*.xml
-mybatis.type-aliases-package=com.wanshifu.domains
-
-########################################################
-#                 \u901A\u7528mapper\u914D\u7F6E                        #
-########################################################
-#mappers \u591A\u4E2A\u63A5\u53E3\u65F6\u9017\u53F7\u9694\u5F00
-mapper.mappers=com.wanshifu.common.base.IBaseCommMapper
-mapper.not-empty=false
-mapper.identity=MYSQL
-
-
-#########################################################
-#               pagehelper\u5206\u9875\u914D\u7F6E                       #
-#########################################################
-pagehelper.helperDialect=mysql
-pagehelper.reasonable=true
-pagehelper.supportMethodsArguments=true
-pagehelper.params=count=countSql
-
-
-#########################################################
-#                      \u65E5\u5FD7\u914D\u7F6E                          #
-#########################################################
-logging.config.classpath=classpath:logback-spring.xml
-
-
-##########################################################
-#                      \u4E1A\u52A1\u53C2\u6570\u914D\u7F6E                       #
-##########################################################
-guid.url=http://dev-guid.wanshifu.com
-
-#\u70ED\u90E8\u7F72-\u6587\u4EF6\u53D8\u66F4\u662F\u5426\u91CD\u542F
-spring.devtools.restart.enabled=true
-#\u70ED\u90E8\u7F72-\u4EE5\u4E0B\u6587\u4EF6\u53D8\u66F4\u4E0D\u91CD\u542F
-spring.devtools.restart.exclude=test/static.html","/test/img.*
-#\u662F\u5426\u5F00\u542F\u8FDC\u7A0B\u8C03\u8BD5
-spring.devtools.remote.debug.enabled=false
-
-##########################################################
-#                       log\u6587\u4EF6\u8DEF\u5F84                       #
-##########################################################
-logging.path=/data/servicesLog/tomcat-user-service/logs/
-
-#\u5173\u95EDwanshifu-starter\u4E2D\u9ED8\u8BA4\u5F00\u542F\u7684\u62E6\u622A\u5668
-wanshifu.defaultSysInterceptor.enable=true
-
-
-##########################################################
-#                        \u76D1\u63A7\u914D\u7F6E                         #
-##########################################################
-#\u6253\u5F00actuator\u76D1\u63A7
-management.security.enabled=false
-#\u53D6\u6D88javamelody\u4EE3\u7406
-javamelody.advisor-auto-proxy-creator-enabled=false
-
-
-##########################################################
-#                      redis\u7F13\u5B58\u76F8\u5173\u914D\u7F6E                  #
-##########################################################
-#\u662F\u5426\u542F\u7528redis
-wanshifu.redis.enable=true
-redis.user.cache.randomtime.start=86400
-redis.user.cache.randomtime.end=259200
-
-
-###########################################################
-#           profile\u914D\u7F6E\u5BF9\u5E94\u73AF\u5883\u7684properties\u6587\u4EF6            #
-###########################################################
-#\u4EE3\u7801\u63D0\u4EA4\u65F6\u53D6\u6D88\u8BE5\u6CE8\u91CA\uFF0C\u5E76\u6CE8\u91CA\u8C03\u4E0B\u9762\u7684local\u3002@deploy.env@\u5360\u4F4D\u7B26\u4F1A\u6839\u636E\u5B9E\u9645\u73AF\u5883\u6307\u5B9A\u914D\u7F6E\u6587\u4EF6
-#spring.profiles.active=@deploy.env@
-spring.profiles.active=local
-
-
+server.port=9999
+spring.application.name=soukuan-good-service
+#\u4F7F\u7528IP\u5730\u5740\u8FDB\u884C\u6CE8\u518C
+eureka.instance.prefer-ip-address=true
