--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
         </dependency>
         <dependency>
             <groupId>com.soukuan</groupId>
+            <artifactId>soukuan-redis-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.soukuan</groupId>
             <artifactId>soukuan-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
