--- a/soukuan-car-service/car-service-client/pom.xml
+++ b/soukuan-car-service/car-service-client/pom.xml
@@ -12,4 +12,10 @@
     <artifactId>car-service-client</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
+    </dependencies>
 </project>
