--- a/soukuan-order-service/order-service-client/pom.xml
+++ b/soukuan-order-service/order-service-client/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>order-service-client</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
