--- a/soukuan-car-service/car-service-web/pom.xml
+++ b/soukuan-car-service/car-service-web/pom.xml
@@ -11,5 +11,78 @@
 
     <artifactId>car-service-web</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.soukuan</groupId>
+            <artifactId>good-service-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.soukuan</groupId>
+            <artifactId>car-service-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
+    <!--多环境部署配置-->
+    <profiles>
+        <profile>
+            <id>test</id>
+            <properties>
+                <deploy.env>test</deploy.env>
+            </properties>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <deploy.env>prod</deploy.env>
+            </properties>
+        </profile>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <deploy.env>dev</deploy.env>
+            </properties>
+        </profile>
+        <profile>
+            <id>local</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <deploy.env>local</deploy.env>
+            </properties>
+        </profile>
+    </profiles>
+
+    <!-- 插件 -->
+    <build>
+        <!--
+        <filters>
+            <filter>src/main/resources/config/application-${deploy.env}.properties</filter>
+        </filters>
+         -->
+        <resources>
+            <resource>
+                <directory>src/main/resources/</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <!--打包插件 -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <finalName>soukuan-good-service</finalName>
+                </configuration>
+            </plugin>
+            <!--测试插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+        </plugins>
+
+    </build>
 </project>
