--- a/soukuan-car-service/pom.xml
+++ b/soukuan-car-service/pom.xml
@@ -16,5 +16,68 @@
         <module>car-service-web</module>
     </modules>
 
+    <!-- 定义所有子模块需要的依赖 -->
+    <dependencies>
+        <!--内部引用-->
+        <dependency>
+            <groupId>com.soukuan</groupId>
+            <artifactId>soukuan-data-source-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.soukuan</groupId>
+            <artifactId>soukuan-swagger-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.soukuan</groupId>
+            <artifactId>soukuan-redis-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.soukuan</groupId>
+            <artifactId>soukuan-log-aop-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.soukuan</groupId>
+            <artifactId>soukuan-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
+        <!--SpringCloud引用-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+
+        <!-- 整合config + cloud bus，实现配置管理与刷新 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+        <!--整合zipkin，并使用kafka收集数据-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
+    </dependencies>
 </project>
