--- a/soukuan-order-service/pom.xml
+++ b/soukuan-order-service/pom.xml
@@ -22,6 +22,11 @@
         <!--内部引用-->
         <dependency>
             <groupId>com.soukuan</groupId>
+            <artifactId>soukuan-test-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.soukuan</groupId>
             <artifactId>soukuan-data-source-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
