--- a/soukuan-good-service/good-service-web/src/main/resources/config/bootstrap.properties
+++ b/soukuan-good-service/good-service-web/src/main/resources/config/bootstrap.properties
@@ -17,3 +17,6 @@ spring.profiles.active=local
 
 #\u76F4\u63A5\u6CE8\u518C\u5230spring boot admin
 #spring.boot.admin.url=http://localhost:7050
+
+#\u53D6\u6D88javamelody\u52A8\u6001\u4EE3\u7406
+javamelody.advisor-auto-proxy-creator-enabled=false
