--- a/soukuan-elastic-job-service/src/main/resources/application.properties
+++ b/soukuan-elastic-job-service/src/main/resources/application.properties
@@ -10,8 +10,13 @@ eureka.client.service-url.defaultZone=http://localhost:8888/eureka/
 regCenter.serverList=localhost:2181
 regCenter.namespace=elastic-job-lite-springboot
 
-stock.simple.cron = 0/5 * * * * ?
+stock.simple.cron = 0 5 * * * ?
 stock.simple.shardingTotalCount = 2
 stock.simple.shardingItemParameters = 0=Chengdu0,1=Chengdu1
 
-javamelody.enabled=false
+stock.data.flow.cron = 0/5 * * * * ?
+stock.data.flow.shardingTotalCount = 2
+stock.data.flow.shardingItemParameters = 0=Chengdu0,1=Chengdu1
+
+#\u53D6\u6D88javamelody\u52A8\u6001\u4EE3\u7406
+javamelody.advisor-auto-proxy-creator-enabled=false
