添加user-center 模块

--- a/soukuan-car-service/car-service-web/pom.xml
+++ b/soukuan-car-service/car-service-web/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>car-service-client</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <!--多环境部署配置-->
