--- a/soukuan-elastic-job-service/src/main/resources/application.properties
+++ b/soukuan-elastic-job-service/src/main/resources/application.properties
@@ -10,11 +10,11 @@ eureka.client.service-url.defaultZone=http://localhost:8888/eureka/
 regCenter.serverList=localhost:2181
 regCenter.namespace=elastic-job-lite-springboot
 
-stock.simple.cron = 0 5 * * * ?
+stock.simple.cron = 0/5 * * * * ?
 stock.simple.shardingTotalCount = 2
 stock.simple.shardingItemParameters = 0=Chengdu0,1=Chengdu1
 
-stock.data.flow.cron = 0/5 * * * * ?
+stock.data.flow.cron = 0 0 9 * * ?
 stock.data.flow.shardingTotalCount = 2
 stock.data.flow.shardingItemParameters = 0=Chengdu0,1=Chengdu1
 
