--- a/soukuan-order-service/order-service-web/src/test/resources/application-spock.properties
+++ b/soukuan-order-service/order-service-web/src/test/resources/application-spock.properties
@@ -49,9 +49,9 @@ pagehelper.params=count=countSql
 ########################################################
 #                       \u6570\u636E\u6E90\u914D\u7F6E                     #
 ########################################################
-soukuan.dataSource.url=jdbc:mysql://localhost:3306/dianshang?autoReconnect=true
+soukuan.dataSource.url=jdbc:mysql://localhost:3306/test?autoReconnect=true
 soukuan.dataSource.username=root
-soukuan.dataSource.password=
+soukuan.dataSource.password=123456
 soukuan.dataSource.driver-class-name=com.mysql.jdbc.Driver
 
 ##########################################################
