--- a/soukuan-order-service/pom.xml
+++ b/soukuan-order-service/pom.xml
@@ -24,6 +24,7 @@
             <groupId>com.soukuan</groupId>
             <artifactId>soukuan-test-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.soukuan</groupId>
