--- a/soukuan-user-center/soukuan-user-center-api/pom.xml
+++ b/soukuan-user-center/soukuan-user-center-api/pom.xml
@@ -9,7 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>user-center-client</artifactId>
+    <artifactId>soukuan-user-center-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
