--- a/soukuan-user-center/soukuan-user-center-web/pom.xml
+++ b/soukuan-user-center/soukuan-user-center-web/pom.xml
@@ -9,7 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>user-center-web</artifactId>
+    <artifactId>soukuan-user-center-web</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.soukuan</groupId>
+            <artifactId>soukuan-user-center-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
