修改代码结构

--- a/soukuan-user-center/soukuan-user-center-web/src/main/resources/config/bootstrap.properties
+++ b/soukuan-user-center/soukuan-user-center-web/src/main/resources/config/bootstrap.properties
@@ -15,3 +15,5 @@ spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=soukuan-config-service
 
 spring.profiles.active=local
+
+soukuan.redis.enable=false
