--- a/soukuan-user-center/soukuan-user-center-web/src/main/resources/config/bootstrap.properties
+++ b/soukuan-user-center/soukuan-user-center-web/src/main/resources/config/bootstrap.properties
@@ -4,16 +4,17 @@ server.port=6040
 spring.application.index=${random.long}
 #\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
 eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka
+
 #\u4ECE\u914D\u7F6E\u4E2D\u5FC3\u83B7\u53D6\u914D\u7F6E
 spring.cloud.config.enabled=true
 spring.cloud.config.name=soukuan-user-center-service
-spring.cloud.config.profile=local
+spring.cloud.config.profile=@deploy.env@
 spring.cloud.config.label=master
 #\u53EF\u4EE5\u914D\u7F6E\u901A\u8FC7\u914D\u7F6E\u4E2D\u5FC3\u5730\u5740\uFF0C\u6216\u8005\u914D\u7F6E\u4E2D\u5FC3\u9879\u76EE\u83B7\u53D6\u914D\u7F6E
-#spring.cloud.config.uri=http://localhost:8001/
+#spring.cloud.config.uri=http://localhost:7020/
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=soukuan-config-service
 
-spring.profiles.active=local
+spring.profiles.active=@deploy.env@
 
 soukuan.redis.enable=false
