--- a/soukuan-good-service/good-service-web/src/main/resources/config/bootstrap.properties
+++ b/soukuan-good-service/good-service-web/src/main/resources/config/bootstrap.properties
@@ -7,13 +7,13 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka
 #\u4ECE\u914D\u7F6E\u4E2D\u5FC3\u83B7\u53D6\u914D\u7F6E
 spring.cloud.config.enabled=true
 spring.cloud.config.name=soukuan-good-service
-spring.cloud.config.profile=local
+spring.cloud.config.profile=@deploy.env@
 spring.cloud.config.label=master
 #\u53EF\u4EE5\u914D\u7F6E\u901A\u8FC7\u914D\u7F6E\u4E2D\u5FC3\u5730\u5740\uFF0C\u6216\u8005\u914D\u7F6E\u4E2D\u5FC3\u9879\u76EE\u83B7\u53D6\u914D\u7F6E
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=soukuan-config-service
 
-spring.profiles.active=local
+spring.profiles.active=@deploy.env@
 
 #\u76F4\u63A5\u6CE8\u518C\u5230spring boot admin
 #spring.boot.admin.url=http://localhost:7050
