--- a/soukuan-order-service/order-service-web/src/main/resources/config/bootstrap.properties
+++ b/soukuan-order-service/order-service-web/src/main/resources/config/bootstrap.properties
@@ -7,11 +7,11 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka
 #\u4ECE\u914D\u7F6E\u4E2D\u5FC3\u83B7\u53D6\u914D\u7F6E
 spring.cloud.config.enabled=true
 spring.cloud.config.name=soukuan-order-service
-spring.cloud.config.profile=local
+spring.cloud.config.profile=@deploy.env@
 spring.cloud.config.label=master
 #\u53EF\u4EE5\u914D\u7F6E\u901A\u8FC7\u914D\u7F6E\u4E2D\u5FC3\u5730\u5740\uFF0C\u6216\u8005\u914D\u7F6E\u4E2D\u5FC3\u9879\u76EE\u83B7\u53D6\u914D\u7F6E
 #spring.cloud.config.uri=http://localhost:8001/
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=soukuan-config-service
 
-spring.profiles.active=local
+spring.profiles.active=@deploy.env@
