--- a/soukuan-good-service/pom.xml
+++ b/soukuan-good-service/pom.xml
@@ -22,27 +22,27 @@
         <dependency>
             <groupId>com.soukuan</groupId>
             <artifactId>soukuan-data-source-starter</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.soukuan</groupId>
             <artifactId>soukuan-swagger-starter</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.soukuan</groupId>
             <artifactId>soukuan-redis-starter</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.soukuan</groupId>
             <artifactId>soukuan-log-aop-starter</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.soukuan</groupId>
             <artifactId>soukuan-common</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
         <!--SpringCloud引用-->
