--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>soukuan-service</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>soukuan-order-service</module>
@@ -24,7 +24,7 @@
         <connection>scm:git:https://github.com/xiebiao123/soukuan.git</connection>
         <developerConnection>scm:git:https://github.com/xiebiao123/soukuan.git</developerConnection>
         <url>scm:git:https://github.com/xiebiao123/soukuan.git</url>
-        <tag>v1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
