--- a/soukuan-order-service/order-service-web/pom.xml
+++ b/soukuan-order-service/order-service-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>soukuan-order-service</artifactId>
         <groupId>com.soukuan</groupId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,13 +14,13 @@
         <dependency>
             <groupId>com.soukuan</groupId>
             <artifactId>order-service-client</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>com.soukuan</groupId>
             <artifactId>good-service-client</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
