--- a/soukuan-user-center/soukuan-user-center-web/pom.xml
+++ b/soukuan-user-center/soukuan-user-center-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>soukuan-user-center</artifactId>
         <groupId>com.soukuan</groupId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,7 +13,7 @@
         <dependency>
             <groupId>com.soukuan</groupId>
             <artifactId>soukuan-user-center-api</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
